--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -26,7 +26,7 @@ body {
 	background: #f5f5f5;
 	color: #111111;
 	min-width: 230px;
-	max-width: 550px;
+	max-width: 650px;
 	margin: 0 auto;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
@@ -74,10 +74,16 @@ body {
 	font-size: 80px;
 	font-weight: 200;
 	text-align: center;
-	color: #b83f45;
+	color: #0d6be6;
 	-webkit-text-rendering: optimizeLegibility;
 	-moz-text-rendering: optimizeLegibility;
 	text-rendering: optimizeLegibility;
+}
+
+img {
+    width: 5%;
+    height: auto;
+	vertical-align: top;
 }
 
 .new-todo,
@@ -214,7 +220,7 @@ body {
 	line-height: 1.2;
 	transition: color 0.4s;
 	font-weight: 400;
-	color: #4d4d4d;
+	color: #0b80ee;
 }
 
 .todo-list li.completed label {
