--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -220,7 +220,7 @@ img {
 	line-height: 1.2;
 	transition: color 0.4s;
 	font-weight: 400;
-	color: #0b80ee;
+	color:black;
 }
 
 .todo-list li.completed label {
